# ROVER

./: .gitignore  Dockerfile  README.md  create-admin.sh  docker-compose.yml  gemini.md  pyproject.toml  setup.sh
authelia/: configuration.yml.example  users_database.yml.example
nginx/: nginx.conf
ref/: aquasecurity-trivy-8a5edab282632443.txt  falconry-falcon-8a5edab282632443.txt  testcontainers-testcontainers-python-8a5edab282632443.txt
src/rover/: app.py  auth.py  config.py  eol_proxy.py  permissions.py  scan_queue.py  scanner.py  worker.py
src/rover/static/cm_build/: Dockerfile  index.js  package.json
src/rover/static/js/: codemirror-toml.bundle.js
src/rover/templates/: admin_users.html  base.html  config.html  dashboard.html  package_assets_table.html  package_dashboard.html  package_eol_cards.html  product_dashboard.html  queue_table.html  release_assets_table.html  release_dashboard.html  release_major_component_cards.html  report.html  report_semgrep.html
tests/: test_eol_proxy.py  test_scanner.py
tests/manual_tests/: test_helm.md
